--- a/src/style/variables.css
+++ b/src/style/variables.css
@@ -1,6 +1,7 @@
 :root {
 	--background: #ffffff;;
 	--foreground: #000000;
+	--details: #FFF859;
 	
 	--font-size: 20px;
 	--font-family: 'JetBrains Mono', monospace;
